--- a/XamlApp/GameEngine.vcxproj.filters
+++ b/XamlApp/GameEngine.vcxproj.filters
@@ -34,6 +34,7 @@
     <ClCompile Include="Shared.cpp" />
     <ClCompile Include="MainPageTypes.cpp" />
     <ClCompile Include="objects\Mesh.cpp" />
+    <ClCompile Include="directx\Terrain.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h" />
@@ -56,6 +57,7 @@
     <ClInclude Include="Shared.h" />
     <ClInclude Include="MainPageTypes.h" />
     <ClInclude Include="objects\Mesh.h" />
+    <ClInclude Include="directx\Terrain.h" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="Assets\Wide310x150Logo.scale-200.png">
